# DJSW_collabrative_coding

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: sphinx-builder.yml
DJSW/: eval.py  main.py  run.sh  train.py
models/: wmlp.py
reports/: slurm-13618444.out  slurm-13631080.out
utils/: wdataloader.py
weights/WMLP/: wmlp_train_1_checkpoint_epoch_100.pt
